# Android-DpiScaler

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PNG2Drawable.spec  README.md  RELEASE.md  SECURITY.md  ic_dpi_scaler.icns  icon.icns  main.py  main.spec  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
core/: __init__.py  app_metadata.py  config_manager.py  frame_utils.py  function_worker.py  image_exporter.py  image_utils.py  project_utils.py  resource_name.py  validated_line_edit.py
domain/: __init__.py  export_models.py
gui/: __init__.py  export_settings_widget.py  image_drop_widget.py  main_window.py  project_settings_widget.py
infrastructure/: __init__.py  atomic_file.py
packaging/pyinstaller/: android_dpiscaler.spec
packaging/scripts/: build_linux.sh  build_macos.sh  build_windows.ps1  generate_checksums.py
services/: __init__.py  export_planner.py  export_service.py
tests/: test_export_planner.py  test_export_service.py  test_image_utils.py  test_project_utils.py  test_resource_name.py
